--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
 <meta http-equiv=x-ua-compatible content="IE=edge,chrome=1">
 <title>Sunflower Dash | Sunflower Dash</title>
 <meta name=viewport content="width=device-width,minimum-scale=1">
-<meta name=description content="Simply Useful Apps">
+<meta name=description content="A fun game with lots of sunflowers">
 <meta name=generator content="Hugo 0.88.1">
 <meta name=ROBOTS content="INDEX, FOLLOW">
 <link rel=stylesheet href=/sunflower-dash/ananke/css/main.min.abe0b1c07d5e33565b0f9b998a7b1b5228b709f36af363e2766bc8035f2237b7.css>
 <link href=/sunflower-dash/index.xml rel=alternate type=application/rss+xml title="Sunflower Dash">
 <link href=/sunflower-dash/index.xml rel=feed type=application/rss+xml title="Sunflower Dash">
 <meta property="og:title" content="Sunflower Dash">
-<meta property="og:description" content="Simply Useful Apps">
+<meta property="og:description" content="A fun game with lots of sunflowers">
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://temperate-designs.github.io/sunflower-dash/">
 <meta itemprop=name content="Sunflower Dash">
-<meta itemprop=description content="Simply Useful Apps"><meta name=twitter:card content="summary">
+<meta itemprop=description content="A fun game with lots of sunflowers"><meta name=twitter:card content="summary">
 <meta name=twitter:title content="Sunflower Dash">
-<meta name=twitter:description content="Simply Useful Apps">
+<meta name=twitter:description content="A fun game with lots of sunflowers">
 <script type=application/javascript>var doNotTrack=!1;doNotTrack||(window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)},ga.l=+new Date,ga('create','G-K69Z84DP1Y','auto'),ga('send','pageview'))</script>
 <script async src=https://www.google-analytics.com/analytics.js></script>
 </head>
@@ -98,7 +98,7 @@ Sunflowers
 Sunflower Dash
 </h1>
 <h2 class="fw1 f5 f3-l white-80 measure-wide-l center mt3">
-Simply Useful Apps
+A fun game with lots of sunflowers
 </h2>
 </div>
 </div>
