deploy: 4799a2dba77d640db9aa6b48c5a7dd8565d84e30

--- a/about/index.html
+++ b/about/index.html
@@ -15,7 +15,7 @@
 <link rel=icon type=image/png href=/sunflower-dash/favicons/android-96x96.png sizes=96x96>
 <link rel=icon type=image/png href=/sunflower-dash/favicons/android-144x144.png sizes=144x144>
 <link rel=icon type=image/png href=/sunflower-dash/favicons/android-192x192.png sizes=192x192>
-<title>About Goldydocs | Sunflower Dash</title>
+<title>About Sunflower Dash | Sunflower Dash</title>
 <meta name=description content="
 
 
@@ -34,14 +34,14 @@
 
 
 ">
-<meta property="og:title" content="About Goldydocs">
+<meta property="og:title" content="About Sunflower Dash">
 <meta property="og:description" content="A fun game with lots of sunflowers">
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://temperate-designs.github.io/sunflower-dash/about/"><meta property="og:image" content="https://temperate-designs.github.io/sunflower-dash/about/featured-background.jpg"><meta property="og:site_name" content="Sunflower Dash">
-<meta itemprop=name content="About Goldydocs">
+<meta itemprop=name content="About Sunflower Dash">
 <meta itemprop=description content="A fun game with lots of sunflowers"><meta name=twitter:card content="summary_large_image">
 <meta name=twitter:image content="https://temperate-designs.github.io/sunflower-dash/about/featured-background.jpg">
-<meta name=twitter:title content="About Goldydocs">
+<meta name=twitter:title content="About Sunflower Dash">
 <meta name=twitter:description content="A fun game with lots of sunflowers">
 <link rel=preload href=/sunflower-dash/scss/main.min.bd5285b713d3061549a6bfd34e5f4ec6775ede36672a3088260f0d420050647f.css as=style>
 <link href=/sunflower-dash/scss/main.min.bd5285b713d3061549a6bfd34e5f4ec6775ede36672a3088260f0d420050647f.css rel=stylesheet integrity>
@@ -84,7 +84,7 @@
 <div class=row>
 <div class=col-12>
 <div class=text-center>
-<h1 class="display-1 mt-0 mt-md-5 pb-4">About Sunflowre Dash</h1>
+<h1 class="display-1 mt-0 mt-md-5 pb-4">About Sunflower Dash</h1>
 <div class="pt-3 lead">
 <p class="lead mt-5">A game.
 </p>
@@ -157,7 +157,7 @@
 <div class="col-12 col-sm-4 text-center py-2 order-sm-2">
 <small class=text-white>&copy; 2021 Temperate Designs All Rights Reserved</small>
 <small class=ml-1><a href=https://policies.google.com/privacy target=_blank rel=noopener>Privacy Policy</a></small>
-<p class=mt-2><a href=/sunflower-dash/about/>About Goldydocs</a></p>
+<p class=mt-2><a href=/sunflower-dash/about/>About Sunflower Dash</a></p>
 </div>
 </div>
 </div>
