--- a/community/index.html
+++ b/community/index.html
@@ -54,7 +54,8 @@
 </li>
 </ul>
 </div>
-<div class="navbar-nav d-none d-lg-block"></div>
+<div class="navbar-nav d-none d-lg-block"><input type=search class="form-control td-search-input" placeholder="&#xf002; Search this site…" aria-label="Search this site…" autocomplete=off>
+</div>
 </nav>
 </header>
 <div class="container-fluid td-default td-outer">
