--- a/community/_print/index.html
+++ b/community/_print/index.html
@@ -92,11 +92,8 @@
 <li title=GitHub>
 <a target=_blank rel=noopener href=https://github.com/Temperate-Designs/sunflower-dash><i class="fab fa-github"></i> GitHub:</a> Development takes place here!
 </li>
-<li title=Slack>
-<a target=_blank rel=noopener href=https://example.org/slack><i class="fab fa-slack"></i> Slack:</a> Chat with other project developers
-</li>
 <li title="Developer mailing list">
-<a target=_blank rel=noopener href=https://example.org/mail><i class="fa fa-envelope"></i> Developer mailing list:</a> Discuss development issues around the project
+<a target=_blank rel=noopener href=https://github.com/Temperate-Designs/sunflower-dash/discussions><i class="fa fa-envelope"></i> Developer mailing list:</a> Discuss development issues around the project
 </li>
 </ul>
 <p>You can find out how to contribute to these docs in our <a href=../docs/contribution-guidelines/>Contribution Guidelines</a>.
@@ -134,13 +131,8 @@
 <i class="fab fa-github"></i>
 </a>
 </li>
-<li class="list-inline-item mx-2 h3" data-toggle=tooltip data-placement=top title=Slack aria-label=Slack>
-<a class=text-white target=_blank rel=noopener href=https://example.org/slack aria-label=Slack>
-<i class="fab fa-slack"></i>
-</a>
-</li>
 <li class="list-inline-item mx-2 h3" data-toggle=tooltip data-placement=top title="Developer mailing list" aria-label="Developer mailing list">
-<a class=text-white target=_blank rel=noopener href=https://example.org/mail aria-label="Developer mailing list">
+<a class=text-white target=_blank rel=noopener href=https://github.com/Temperate-Designs/sunflower-dash/discussions aria-label="Developer mailing list">
 <i class="fa fa-envelope"></i>
 </a>
 </li>
